# cookiecutter-applied-research-project

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  00-check_jax.sh  01-main.py  README.md  check_jax.py  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
{{cookiecutter.project_slug}}/configs/: config.py
{{cookiecutter.project_slug}}/envs/: environment.yaml
{{cookiecutter.project_slug}}/experiments/: dataloader.py  experiment.py
